[project]
name = "hello-minjung00"
version = "0.3.0"
description = "The Python program I'm distributing for the first time"
authors = [
    {name = "MinjungKang", email = "kmj931208@gmail.com"},
]
dependencies = []
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
